进货和退货/出货

--- a/javaProject/com.oxhpjk.jxc/com/oxhpjk/jxc/dao/SqlConfig.properties
+++ b/javaProject/com.oxhpjk.jxc/com/oxhpjk/jxc/dao/SqlConfig.properties
@@ -5,8 +5,9 @@ DBhost=localhost
 #数据库端口号
 DBport=3306
 #数据库名字及编码
-DBname=test1?useUnicode=true&characterEncoding=utf-8
+#DBname=test1?useUnicode=true&characterEncoding=utf-8
+DBname=test1?useSSL=false&serverTimezone=UTC
 #数据库的登录名
 DBuser=root
 #数据库登录密码
-DBpassword=root
+DBpassword=123
