--- a/javaProject/.classpath
+++ b/javaProject/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="com.oxhpjk.jxc"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="resource/mysql-connector-java-8.0.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
